--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Cairo:wght@500&display=swap');
 
 @tailwind base;
 @tailwind components;
@@ -8,4 +9,45 @@
   html {
     font-family: Montserrat, system-ui, sans-serif;
   }
+}
+
+@layer components {
+  .link-icon {
+    @apply w-[30px] h-[30px] fill-gray-300;
+  }
+  /* side nav link item  */
+  .sidenav-item {
+    @apply w-full rounded-md p-2   hover:bg-green-50;
+  }
+  .sidenav-item-link {
+    @apply flex items-center  gap-2    cursor-pointer;
+  }
+  .sidenav-item-link-text {
+    @apply text-gray-600 font-medium text-sm;
+  }
+  .sidenav-item-link-icon {
+    @apply w-[20px] h-[20px] fill-gray-300;
+  }
+
+  .profile-menu-button {
+    @apply flex gap-1 hover:bg-gray-100 p-3 text-gray-500 text-sm font-medium cursor-pointer;
+  }
+}
+
+.overlay-show {
+  visibility: visible;
+  opacity: 1;
+}
+
+/* side nav  */
+.sidenav-open {
+  left: 0;
+}
+.sidenav-transistion {
+  transition: left 0.3s ease-out;
+}
+
+.overlay-show {
+  opacity: 0.5;
+  visibility: visible;
 }
