--- a/src/style.css
+++ b/src/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Cairo:wght@500&display=swap');
 
 @tailwind base;
@@ -7,7 +7,7 @@
 
 @layer base {
   html {
-    font-family: Montserrat, system-ui, sans-serif;
+    font-family: Montserrat, Cairo, system-ui, sans-serif;
   }
 }
 
@@ -31,6 +31,10 @@
 
   .profile-menu-button {
     @apply flex gap-1 hover:bg-gray-100 p-3 text-gray-500 text-sm font-medium cursor-pointer;
+  }
+
+  .carousel-img {
+    @apply w-[100%] h-[100%]  object-cover rounded-md;
   }
 }
 
